spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ header .introduction p {
 }
 
 .about_text p {
-  font-size: 0.8em;
+  font-size: 1em;
   padding: 1px;
   margin: 0px 10px;
   color: #FFFFFF;
